# Terpel

./: .gitignore  README.md  analisis_terpel.ipynb  index.html  pyproject.toml
