[project]
name = "terpel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11.9"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
    "xlrd>=2.0.2",
]
